# pyth-on-line

./: .gitignore  .pre-commit-config.yaml  METADATA.md  README.md  TESTING_GITHUB_TOKENS.md  _redirects  eslint.config.js  netlify.toml  package.json  playwright.config.ts  pyproject.toml  simple_module.py  svelte.config.js  test_cli.py  test_module_exec.py  tsconfig.json  uno.config.ts  vercel.json  vite.config.ts
.codesandbox/: tasks.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: eslint.yml  js.yml  py.yml  python-checks.yml  spelling.yml  taze.yml
debug_ns/: test.py
docs/: TESTING.md
src/: app.d.ts  app.html  copy-assets.js  service-worker.ts
src/lib/: contexts.ts  date.ts  highlight.ts  index.ts  markdown.ts  md.css  metadata.ts  oauth.ts  seo.ts  stores.ts  types.ts  useMetadata.ts  user-token.ts
src/lib/components/: CodeBlock.svelte  Console.svelte  ConsolePrompt.svelte  Details.svelte  Editor.svelte  ErrorExplain.svelte  ErrorExplainer.svelte  FeatureCard.svelte  GitHubTokenManager.svelte  GitHubUser.svelte  Hero.svelte  InlineCode.svelte  InteractiveCodeBlock.svelte  Intro.svelte  Markdown.svelte  Modal.svelte  Notebook.svelte  Portal.svelte  Progress.svelte  Tooltip.svelte
src/lib/components/chat/: Code.svelte  Markdown.svelte
src/lib/components/command/: CmdK.svelte  Item.svelte  helper.ts
src/lib/components/console/: ButtonGroup.svelte  Copy.svelte  Err.svelte  HeadlessConsole.svelte  Highlight.svelte  In.svelte  MaybeANSI.svelte  Out.svelte  Repr.svelte  UseCopy.svelte  WithConsoleCommands.svelte  index.ts
src/lib/components/markdown/: BaseMarkdown.svelte  Code.svelte  Fallback.svelte  InlineCode.svelte  Link.svelte  Node.svelte  Pre.svelte  Router.svelte  Table.svelte
src/lib/components/notebook/: Code.svelte  HeadlessNotebook.svelte  Node.svelte  Notebook.svelte
src/lib/components/reusable/: CodespaceLifecycle.svelte  WithCodeActions.svelte  WithMarkdown.svelte  WithTooltip.svelte  WorkspaceLifecycle.svelte
src/lib/examples/: explain.ts
src/lib/github/: client.ts
src/lib/libraries.io/: client.ts
src/lib/plugins/: dir2json.ts
src/lib/pyodide/: common.ts  console.py  entries.ts  env.ts  explain.ts  get-py.ts  index.ts  init.py  init.ts  load-sources.py  stub.pyi  translate.ts
src/lib/pyodide/api/: explain.ts
src/lib/pyodide/start/: chat.ts  console.ts  emscripten_fs.ts  examples.ts  fs.ts  init.ts  loader.py  notebook.ts  web.ts  workspace.ts
src/lib/pyodide/worker/: types.ts  worker.ts  workerApi.ts
src/lib/server/: minimal-mcp.ts
src/lib/utils/: cache.ts  env.ts  formatSource.ts  generateDeclarations.js  headers.ts  html.ts  list2tree.ts  pack.ts  scroll.ts  source.ts  toast.ts  typing.ts
src/netlify/edge-functions/: llms-redirect.ts
src/pyth_on_line.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/python/: __init__.py  stub.pyi
src/python/app/: console.d.ts  console.py
src/python/app/templates/: explain-error.j2  groundings.j2
src/python/app/utils/: bridge.py  bridge.pyi  package.py  patches.py
src/python/chat/: __init__.py  explain.py
src/python/chat/templates/: __init__.py  explain-error.j2  groundings.j2
src/python/common/: imports.py  inspection.py  lock.py  patches.py  pyproject.toml  sync.py  toast.py
src/python/common/reactivity/: __init__.py  functional.py  helpers.py  hmr.py  primitives.py
src/python/common/reactivity/hmr/: api.py  core.py  hooks.py  utils.py
src/python/console/: bridge.py  bridge.pyi  console.d.ts  console.py  eval.py  item.pyi  source.py
src/python/examples/: __init__.py  demo.py  sanic_example.py
src/python/notebook/: __init__.py  exec.py  item.pyi  notebook.d.ts  stream.py  traceback.py
src/python/patches/: README.md  imports.py  lock.py  patches.py  pyodide_js.pyi
src/python/watchfiles/: __init__.py
src/python/web/: __init__.py  dom.py  fetch.py  html.py
src/python/workspace/: __init__.py  diff.py  workspace.d.ts
src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
src/routes/(notebook)/: +layout.svelte
src/routes/(notebook)/about/: +page.svelte
src/routes/(workspace)/: +error.svelte  FileContent.svelte  FileList.svelte  Tree.svelte  Workspace.svelte
src/routes/(workspace)/gist/: +page.svelte  +page.ts  +server.ts
src/routes/(workspace)/github/: +page.svelte
src/routes/(workspace)/playground/: +page.svelte
src/routes/about/: +page.svelte
src/routes/console/: +page.svelte
src/routes/cpython/[...path]/: +page.svelte
src/routes/hmr/: +page.svelte  FancyButton.svelte  SparklesText.svelte  concepts.ts
src/routes/hmr/llms/: +page.svelte  +page.ts
src/routes/hmr/llms.txt/: +page.svelte  +server.ts
src/routes/hmr/llms[[ext]]/: +page.svelte  +server.ts
src/routes/hmr/llms[ext]/: +server.ts
src/routes/hmr/mcp/: +page.svelte  +server.ts  MCP.md  minimal-mcp.ts
src/routes/oauth/: +page.server.ts  +page.svelte
src/routes/og/[...path]/: +server.ts  OG.svelte
src/routes/playground/: +page.svelte  FileList.svelte  Tree.svelte
src/routes/proxy/: +server.ts
src/routes/pypi/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts  +server.ts  search.ts  store.ts
src/routes/pypi/[project]/: +page.server.ts  +page.svelte  types.ts
src/routes/pypi/search/: +page.server.ts  +page.svelte
src/routes/pypi/~search/: +server.ts
src/routes/simple/[[project]]/: +server.ts
src/routes/sources/: +server.ts
src/routes/test/: +page.svelte  example.md
src/templates/: groundings.j2  index.ts
src/tests/: ConsolePrompt.test.ts  Details.test.ts  GitHubUser.test.ts  Infrastructure.test.ts  Tooltip.test.ts
static/: same-origin-test.html
test_nspkg/: hello.py
test_package/: __main__.py
tests/e2e/: basic.test.ts
tests/py/: test_async.py  test_cli.py  test_collections.py  test_concurrency.py  test_exec_hack.py  test_experimental_dirty.py  test_hmr.py  test_issue_273.py  test_performance.py  test_reactivity.py  test_watchfiles.py  test_z.py  utils.py
tests/py/utils/: __init__.py  fs.py  io.py  lineno.py  mock.py  time.py  tmpenv.py  trio.py
(+28 files in other folders)
