[project]
name = "hmr"
dynamic = ["version"]
requires-python = ">=3.12"
description = "Hot Module Reload for Python"
dependencies = ["watchfiles>=0.21,<2 ; sys_platform != 'emscripten'"]

[project.scripts]
hmr = "reactivity.hmr:cli"

[project.urls]
repository = "https://github.com/promplate/pyth-on-line/tree/reactivity"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "reactivity/hmr/core.py" }
